[gd_scene load_steps=8 format=3 uid="uid://cwq5lpo80io0d"]

[ext_resource type="Texture2D" uid="uid://dkfnjychc24ah" path="res://assets/img/default/banner.png" id="1_gtc0v"]
[ext_resource type="Script" path="res://scripts/game_banner.gd" id="1_spqyp"]
[ext_resource type="Material" uid="uid://e2ayymwahag0" path="res://scenes/highlight.tres" id="3_gxj7a"]

[sub_resource type="Animation" id="Animation_a6w6v"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:custom_minimum_size:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:custom_minimum_size:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect/ColorRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BottomLabel:custom_minimum_size:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(200, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TopLabel:custom_minimum_size:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(200, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_guf86"]
resource_name = "focus_entered"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottomLabel:custom_minimum_size:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(200, -0.15, 0, 0.15, 0, 60, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0.3, 0.6)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TopLabel:custom_minimum_size:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(200, -0.15, 0, 0.15, 0, 60, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0.3, 0.6)
}

[sub_resource type="Animation" id="Animation_b7rdm"]
resource_name = "focus_exit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottomLabel:custom_minimum_size:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(60, -0.15, 0, 0.15, 0, 200, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TopLabel:custom_minimum_size:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(60, -0.15, 0, 0.15, 0, 200, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1yxky"]
_data = {
"RESET": SubResource("Animation_a6w6v"),
"focus_entered": SubResource("Animation_guf86"),
"focus_exit": SubResource("Animation_b7rdm")
}

[node name="GameBanner" type="VBoxContainer"]
offset_right = 31.0
offset_bottom = 127.0
theme_override_constants/separation = 0
script = ExtResource("1_spqyp")

[node name="TopLabel" type="Label" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
texture = ExtResource("1_gtc0v")
expand_mode = 3
stretch_mode = 6

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
visible = false
material = ExtResource("3_gxj7a")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BottomLabel" type="Label" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1yxky")
}

[connection signal="focus_entered" from="TextureRect" to="." method="_on_texture_rect_focus_entered"]
[connection signal="focus_exited" from="TextureRect" to="." method="_on_texture_rect_focus_exited"]
